usr/src/cmd/mailx/lex.c
@@ -98,7 +98,7 @@ setfile(char *name, int isedit)
 				fprintf(stderr, gettext("No mail.\n"));
 			else
 				fprintf(stderr, gettext("No mail for %s\n"),
-f+1);
+				    f+1);
 		}
 		goto doret;
 	}
@@ -109,7 +109,7 @@ f+1);
 		if (isedit)
 			if (stbuf.st_size == 0L)
 				fprintf(stderr, gettext("%s: empty file\n"),
-name);
+				    name);
 			else
 				fprintf(stderr,
 				    gettext("%s: not a regular file\n"), name);
@@ -118,7 +118,7 @@ name);
 				fprintf(stderr, gettext("No mail.\n"));
 			else
 				fprintf(stderr, gettext("No mail for %s\n"),
-strrchr(name, '/') + 1);
+				    strrchr(name, '/') + 1);
 		}
 		fclose(ibuf);
 		goto doret;
@@ -135,7 +135,7 @@ strrchr(name, '/') + 1);
 		if (exitflg)
 			goto doexit;	/* no mail, return error */
 		fprintf(stderr, gettext("Your mail is being forwarded to %s"),
-fortest+11);
+		    fortest+11);
 		fclose(ibuf);
 		goto doret;
 	}
@@ -197,7 +197,7 @@ fortest+11);
 #endif
 	mailsize = fsize(ibuf);
 	if ((fd = open(tempMesg, O_RDWR|O_CREAT|O_EXCL, 0600)) < 0 ||
-	(otf = fdopen(fd, "w")) == NULL) {
+	    (otf = fdopen(fd, "w")) == NULL) {
 		perror(tempMesg);
 		if (!edit && issysmbox)
 			Verhogen();
@@ -516,7 +516,7 @@ execute(char linebuf[], int contxt)
 	 * If we are in a source file, just unstack.
 	 */
 
-	if (com->c_func == (int (*)(void *))edstop) {
+	if ((uintptr_t)com->c_func == (uintptr_t)edstop) {
 		if (sourcing) {
 			if (loading)
 				return (1);
@@ -587,7 +587,7 @@ execute(char linebuf[], int contxt)
 				*msgvec = 0;
 			else {
 				*msgvec = first(com->c_msgflag,
-					com->c_msgmask);
+				    com->c_msgmask);
 				msgvec[1] = 0;
 			}
 		if (*msgvec == 0) {
@@ -628,7 +628,7 @@ execute(char linebuf[], int contxt)
 		 * A vector of strings, in shell style.
 		 */
 		if ((c = getrawlist(cp, arglist,
-				sizeof (arglist) / sizeof (*arglist))) < 0)
+		    sizeof (arglist) / sizeof (*arglist))) < 0)
 			break;
 		if (c < com->c_minargs) {
 			fprintf(stderr,
@@ -666,7 +666,7 @@ execute(char linebuf[], int contxt)
 		return (1);
 	if (e && sourcing)
 		unstack();
-	if (com->c_func == (int (*)(void *))edstop)
+	if ((uintptr_t)com->c_func == (uintptr_t)edstop)
 		return (1);
 	if (value("autoprint") != NOSTR && com->c_argtype & P)
 		if ((dot->m_flag & MDELETED) == 0) {
@@ -684,12 +684,7 @@ execute(char linebuf[], int contxt)
  * When we wake up after ^Z, reprint the prompt.
  */
 static void
-#ifdef	__cplusplus
-contin(int)
-#else
-/* ARGSUSED */
-contin(int s)
-#endif
+contin(int s __unused)
 {
 	if (shudprompt)
 		printf("%s", prompt);
@@ -701,12 +696,7 @@ contin(int s)
  * Branch here on hangup signal and simulate quit.
  */
 void
-#ifdef	__cplusplus
-hangup(int)
-#else
-/* ARGSUSED */
-hangup(int s)
-#endif
+hangup(int s __unused)
 {
 
 	holdsigs();
@@ -898,7 +888,7 @@ newfileinfo(int start)
 		nstrcat(fname, sizeof (fname), "/");
 		if (strncmp(fname, editfile, strlen(fname)) == 0) {
 			snprintf(zname, sizeof (zname),
-				"+%s", editfile + strlen(fname));
+			    "+%s", editfile + strlen(fname));
 			ename = zname;
 		}
 	}
@@ -926,12 +916,7 @@ newfileinfo(int start)
  */
 
 int
-#ifdef	__cplusplus
-pversion(char *)
-#else
-/* ARGSUSED */
-pversion(char *s)
-#endif
+pversion(char *s __unused)
 {
 	printf("%s\n", version);
 	return (0);
